# lestash

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: android.yml  build-crsqlite.yml  ci.yml  claude-code-review.yml  desktop.yml  release.yml
app/: package-lock.json  package.json
app/android-src/: MainActivity.kt
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/android/values/: ic_launcher_background.xml
app/src-tauri/src/: lib.rs  main.rs  share.rs  stt.rs
app/src-tauri/tauri-plugin-google-auth/: Cargo.toml  build.rs
app/src-tauri/tauri-plugin-google-auth/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
app/src-tauri/tauri-plugin-google-auth/android/src/main/java/dev/lestash/plugin/googleauth/: GoogleAuthPlugin.kt
app/src-tauri/tauri-plugin-google-auth/permissions/: default.toml
app/src-tauri/tauri-plugin-google-auth/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
deploy/: install.sh  lestash-server.service  lestash-sync.service  lestash-sync.timer
docs/: api.md  audible-integration-design.md  blog-categories-consolidation.md  handover-linkedin-parent-child.md  linkedin-posting-design.md  mobile-app-design.md  pdf-enrichment-design.md  search-and-collections-research.md  sqlite-sync-research.md  ux-compose-and-categories-design.md  vector-search-design.md
docs/adr/: 0001-pdf-enrichment-pipeline.md
extensions/chrome/: README.md  background.js  manifest.json
extensions/chrome/content-scripts/: gemini.js
extensions/chrome/lib/: api.js
extensions/chrome/options/: options.html  options.js
extensions/chrome/popup/: popup.css  popup.html  popup.js
mobile/: analysis_options.yaml  pubspec.yaml
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/io/lestash/mobile/: MainActivity.kt
mobile/lib/: app.dart  main.dart
mobile/lib/core/database/: database.dart
mobile/lib/core/database/models/: item.dart  peer.dart  tag.dart
mobile/lib/core/providers/: database_provider.dart  sync_provider.dart
mobile/lib/core/sync/: sync_protocol.dart  sync_service.dart
mobile/lib/features/items/providers/: items_provider.dart
mobile/lib/features/items/screens/: item_detail_screen.dart  items_list_screen.dart
mobile/lib/features/items/widgets/: item_filters.dart  item_tile.dart
mobile/lib/features/search/providers/: search_provider.dart
mobile/lib/features/search/screens/: search_screen.dart
mobile/lib/features/search/widgets/: search_result_tile.dart
mobile/lib/features/settings/screens/: settings_screen.dart
mobile/lib/features/sync/providers/: sync_status_provider.dart
mobile/lib/features/sync/screens/: sync_screen.dart
mobile/lib/features/sync/widgets/: peer_tile.dart
mobile/native/: .gitignore  README.md
mobile/native/android/: README.md
mobile/native/ios/: README.md
mobile/test/: widget_test.dart
mobile/test/core/: database_test.dart  sync_protocol_test.dart
plans/: youtube-transcript-parenting.md
scripts/: install-desktop.sh  linkedin_backfill_target_urns.py  linkedin_cache_engaged_posts.py  linkedin_link_postcache_authors.py  linkedin_resolve_authors.py  linkedin_url_lookup.py
