[project]
name = "le-stash-workspace"
version = "0.1.0"
description = "Le Stash monorepo workspace - personal knowledge base CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lestash",
    "lestash-linkedin",
    "lestash-arxiv",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lestash = { workspace = true }
lestash-linkedin = { workspace = true }
lestash-arxiv = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-toml>=0.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
