[project]
name = "le-stash-workspace"
version = "1.2.0"
description = "Le Stash monorepo workspace - personal knowledge base CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lestash",
    "lestash-linkedin",
    "lestash-arxiv",
    "lestash-bluesky",
    "lestash-microblog",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lestash = { workspace = true }
lestash-linkedin = { workspace = true }
lestash-arxiv = { workspace = true }
lestash-bluesky = { workspace = true }
lestash-microblog = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-toml>=0.10.0",
    "rust-just>=1.46.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "packages/lestash/pyproject.toml:project.version",
    "packages/lestash-arxiv/pyproject.toml:project.version",
    "packages/lestash-linkedin/pyproject.toml:project.version",
    "packages/lestash-bluesky/pyproject.toml:project.version",
    "packages/lestash-microblog/pyproject.toml:project.version",
]
branch = "main"
commit_parser = "angular"
