[package]
name = "lestash-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "lestash_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
whisper-rs = "0.14"
cpal = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs-next = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "multipart", "json"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
