[package]
name = "tauri-plugin-google-auth"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin exposing Android Identity Services (Credential Manager / AuthorizationClient) for Google OAuth on mobile."
publish = false
links = "tauri-plugin-google-auth"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
